--- a/Emoji.css
+++ b/Emoji.css
@@ -10,6 +10,8 @@ header {
 .poop-container {
 	width: 500px;
 	margin: 0 auto;
+	position: absolute;
+	top: 100px;
 }
 #poop {
 	width: 100%;
@@ -18,4 +20,6 @@ header {
     position: absolute;
     top: 424px;
     margin-left: 152px;
+    transform: rotate(180deg);
+    margin-top: -100px;
 }
